fix sidebar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@ html {
 }
 
 #sidebar {
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    height: 100%;
     background: #fff;
 }
 
@@ -16,12 +12,12 @@ html {
     border-bottom: 1px solid black;
 }
 
-#sidebar ul {
-    background: #fff;
+#sidebar ul li:first-child {
+    border-top: 1px solid black;
 }
 
-#sidebar ul li:last-child {
-    border: 0 !important;
+#sidebar ul {
+    background: #fff;
 }
 
 .sticky-top {
